# BeansEngine

./: .gitignore  Cargo.toml  GlTFValidationChecks  GlobalIllumination.sln  GlobalIllumination.vcxproj  GlobalIllumination.vcxproj.filters  Makefile  README.md  compile_shader.bat  imgui.ini  options.config
Archived CPP Version/: Makefile  README.md
Archived CPP Version/src/: App.cpp  App.hpp  BufferStructs.hpp  Camera.cpp  Particle.hpp
Measuring/: automated_testing.sh  calc_mean_stdev.py  gen_graph.py  requirements.txt
assets/shaders/: common.slang  compute.slang  pt.slang  radiance_cascades.slang  raster.slang  reference.slang  shader.slang  uv.slang
assets/sponza/: 1219024358953944284.ktx2  2051777328469649772.ktx2  2185409758123873465.ktx2  2299742237651021498.ktx2  2374361008830720677.ktx2  2411100444841994089.ktx2  2775690330959970771.ktx2  2969916736137545357.ktx2  3371964815757888145.ktx2  3455394979645218238.ktx2  3628158980083700836.ktx2  3827035219084910048.ktx2  4477655471536070370.ktx2  466164707995436622.ktx2  4675343432951571524.ktx2  4871783166746854860.ktx2  4910669866631290573.ktx2  4975155472559461469.ktx2  5061699253647017043.ktx2  5792855332885324923.ktx2  5823059166183034438.ktx2  6047387724914829168.ktx2  6151467286084645207.ktx2  6667038893015345571.ktx2  6772804448157695701.ktx2  715093869573992647.ktx2  7268504077753552595.ktx2  7441062115984513793.ktx2  755318871556304029.ktx2  (+16 more)
src/: App.cpp  App.hpp  BufferStructs.hpp  Camera.cpp  Camera.hpp  Light.hpp  Measurement.hpp  Model.hpp  Particle.hpp  Playground.cpp  Playground.hpp  RadianceStructs.hpp  Shadertoy.cpp  Shadertoy.hpp  Vertex.hpp  app.cpp  app.hpp  app_options.rs  buffer_structs.rs  camera.cpp  camera.hpp  camera.rs  main.cpp  main.rs  model.rs  vertex.rs
(+19 files in other folders)
