[package]
name = "global_illumination"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = "debuginfo"
opt-level = 3
codegen-units = 1

[[bin]]
name = "global_illumination"
path = "src/main.rs"

[[bin]]
name = "reference"
path = "src/main.rs"

[[bin]]
name = "restir"
path = "src/main.rs"

[[bin]]
name = "radiance_cascades"
path = "src/main.rs"

[[bin]]
name = "raster"
path = "src/main.rs"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
futures = "0.3.31"
image = "0.25.9"
imgui = "0.12.0"
imgui-rs-vulkan-renderer = { version = "1.16.0", features = ["dynamic-rendering"] }
imgui-winit-support = "0.13.0"
ktx2-rw = "0.2.4"
lazy_static = "1.5.0"
memoffset = "0.9.1"
mugltf = { version = "0.1.2", features = ["file-loader", "gltf-extensions"] }
nalgebra-glm = "0.20.0"
pollster = "0.4.0"
rand = "0.9.2"
shader-slang = "0.1.0"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
winit = "0.30.12"

[features]
default = []
sponza = []
suzanne = []
radiance_cascades = []
reference = []
restir = []
measure = []
