[package]
name = "beans_engine"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = "debuginfo"
opt-level = 3
codegen-units = 1

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
image = "0.25.9"
imgui = "0.12.0"
imgui-rs-vulkan-renderer = { version = "1.16.0", features = ["dynamic-rendering"] }
imgui-winit-support = "0.13.0"
lazy_static = "1.5.0"
memoffset = "0.9.1"
nalgebra-glm = "0.20.0"
rand = "0.9.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shader-slang = "0.1.0"
winit = "0.30.12"

[features]
default = []
